--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -2,11 +2,113 @@ body{
     background-color: rgb(255, 255, 255);
 }
 
+/* Menu */
+
+.contenedor{
+    width: 90%;
+    max-width: 1200px;
+    margin: auto;
+    overflow: hidden;
+    padding: 60px 0;
+}
+
+.menuNavegacion{
+    padding: 0;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 70px;
+}
+
+.logoG{
+    height: 60px;
+}
+
+.logoG img{
+    display: block;
+    height: 100%;
+}
+
+.enlaces li{
+    list-style: none;
+    display: inline-block;
+
+}
+
+.enlaces a{
+    text-transform: none;
+    color: black;
+}
+
+/* Hero */
+
+.hero{
+    height: 500px;
+    background-image: url("../img/undraw.png");
+    background-position: center;
+    background-size: cover;
+    background-attachment: fixed;
+    text-align: center;
+    border-radius: 20%;
+}
+
+.contenedorTextos{
+    padding: 0;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+/* GRID INFO */
+.bodyG{
+    width: 100vw;
+    height: 100vh;
+    display: grid;
+    grid: 15% 20% 50% 12% / repeat(12,1fr);
+    grid-template-areas: 
+    "header header header header header header header header header header header header"
+    "hero hero hero hero hero hero hero hero hero ad ad ad"
+    "body body body body body body body body body side side side"
+    "footer footer footer footer footer footer footer footer footer footer footer footer ";
+    gap: 1%;
+}
+
+header,section,main,footer{
+    background: #0a1a2a;
+}
+
+.encabezadoG{
+    grid-area: header;
+}
+
+.heroG{
+    grid-area: hero;
+}
+
+.addG{
+    grid-area: ad;
+}
+
+.bodyGr{
+    grid-area: body;
+}
+
+.sideG{
+    grid-area: side;
+}
+
+.pieG{
+    grid-area: footer;
+}
+
+/* OTROS */
+
 .header{
     width: 100%;
     height: 75px;
     background-color: #efefef;
-
     z-index: 10;
     top: 0;
     left: 0;
