--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -5,7 +5,7 @@ body{
 /* Menu */
 
 .contenedor{
-    width: 90%;
+    width: 100%;
     max-width: 1200px;
     margin: auto;
     overflow: hidden;
@@ -14,10 +14,15 @@ body{
 
 .menuNavegacion{
     padding: 0;
+    width: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
     height: 70px;
+    padding: 10px 15px;
+    line-height: normal;
+    font-size: 14px;
+    transition: all 500ms ease;
 }
 
 .logoG{
@@ -37,17 +42,22 @@ body{
 
 .enlaces a{
     text-transform: none;
-    color: black;
+    color: rgb(233, 113, 25);
+    text-decoration: none;
+}
+
+.enlaces a:hover{
+    background-color: rgb(223, 206, 192);
 }
 
 /* Hero */
 
 .hero{
     height: 500px;
-    background-image: url("../img/undraw.png");
+    background-image: url("../img/quienessomos.png");
     background-position: center;
-    background-size: cover;
-    background-attachment: fixed;
+    background-size: 600px;
+    background-repeat: no-repeat;
     text-align: center;
     border-radius: 20%;
 }
@@ -61,104 +71,72 @@ body{
     justify-content: center;
 }
 
-/* GRID INFO */
-.bodyG{
-    width: 100vw;
-    height: 100vh;
-    display: grid;
-    grid: 15% 20% 50% 12% / repeat(12,1fr);
-    grid-template-areas: 
-    "header header header header header header header header header header header header"
-    "hero hero hero hero hero hero hero hero hero ad ad ad"
-    "body body body body body body body body body side side side"
-    "footer footer footer footer footer footer footer footer footer footer footer footer ";
-    gap: 1%;
+.heroA{
+    height: 500px;
+    background-image: url("../img/disciplinas.png");
+    background-position: center;
+    background-size: 600px;
+    background-repeat: no-repeat;
+    text-align: center;
+    border-radius: 20%;
 }
 
-header,section,main,footer{
-    background: #0a1a2a;
+.heroB{
+    height: 500px;
+    background-image: url("../img/rutinas.png");
+    background-position: center;
+    background-size: 600px;
+    background-repeat: no-repeat;
+    text-align: center;
+    border-radius: 20%;
 }
 
-.encabezadoG{
-    grid-area: header;
+.heroC{
+    height: 500px;
+    background-image: url("../img/contact.png");
+    background-position: center;
+    background-size: 600px;
+    background-repeat: no-repeat;
+    text-align: center;
+    border-radius: 20%;
 }
 
-.heroG{
-    grid-area: hero;
-}
-
-.addG{
-    grid-area: ad;
-}
-
-.bodyGr{
-    grid-area: body;
-}
-
-.sideG{
-    grid-area: side;
-}
-
-.pieG{
-    grid-area: footer;
-}
-
-/* OTROS */
-
-.header{
-    width: 100%;
-    height: 75px;
-    background-color: #efefef;
-    z-index: 10;
-    top: 0;
-    left: 0;
-    box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.4);
-}
-
-.container{
-    width: 90%;
-    max-width: 1200px;
-    margin: auto;
-}
-
-.logo{
-    float: left;
-    line-height: 75px;
-}
-
-.logo h1{
-    color: blue;
-    font-weight: 400;
-    font-size: 24px;
-    cursor: default;
-}
-
-.menu{
-    float: right;
-    line-height: 75px;
-}
-
-.menu a{
-    color: orange;
+.botonNaranja{
+    width: 150px;
+    display: block;
+    margin: 0 auto;
+    padding: 15px 0;
+    background: orangered;
+    color: #fff;
     text-decoration: none;
-    display: inline-block;
-    padding: 10px 15px;
-    line-height: normal;
-    font-size: 14px;
-    transition: all 500ms ease;
-    border-bottom: 4px solid transparent;
+    border-radius: 15px;
 }
 
-.sectionQ{
-    background-color: #efefef;
-    color: black;
+.botonNaranja:hover{
+    transform: scale(1.3);
 }
 
-.sectionR{
-    background-color: #efefef;
+.botonAzul{
+    width: 150px;
+    display: block;
+    margin: 0 auto;
+    padding: 15px 0;
+    background: blue;
+    color: #fff;
+    text-decoration: none;
+    border-radius: 15px;
 }
+
+.botonAzul:hover{
+    transform: scale(1.3);
+}
+
+
+/* FOOTER */
+
 .piePagina{
     width: 100%;
+    height: 100px;
     background-color: #fff;
 }
 
@@ -170,11 +148,6 @@ header,section,main,footer{
     grid-template-columns: repeat(3, 1fr);
     grid-gap: 50px;
     padding: 45px 0px;
-}
-
-.logoFooter{
-    width: 70px;
-    height: 70px;
 }
 
 .piePagina .grupo1 .box figure{
@@ -233,6 +206,18 @@ header,section,main,footer{
         padding: 35px 0px;
     }
 }
+
+/* OTROS */
+
+.sectionQ{
+    background-color: #efefef;
+    color: black;
+}
+
+.sectionR{
+    background-color: #efefef;
+}
+
 
 .tituloR{
     font-size: 24px;
@@ -320,4 +305,63 @@ header,section,main,footer{
         text-align: center;
         transition: all 300ms ease;
         text-decoration: none;
+}
+
+/*QUIENES SOMOS*/
+
+.contenedorImg{
+    width: 100%;
+    max-width: 1100px;
+    margin: auto;
+    margin-top: 60px;
+    margin-bottom: 60px;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: 250px;
+    grid-gap: 20px;
+}
+
+.contenedorImg .boxImg figure{
+    width: 100%;
+    height: 100%;
+}
+
+.contenedorImg .boxImg img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.contenedorImg .boxImg:nth-child(1){
+    grid-column-start: span 2;
+}
+
+.contenedorImg .boxImg:nth-child(4){
+    grid-row-start: span 2;
+}
+
+.contenedorImg .boxImg figure:hover{
+    transform: scale(1.2);
+}
+@media screen and (max-width:800px){
+    .contenedorImg{
+        width: 95%;
+        grid-template-columns: repeat(2, 1fr);
+        grid-gap: 10px;
+        grid-template-rows: 200px;
+    }
+    .contenedorImg .boxImg:nth-child(1){
+        grid-column-start: span 1;
+    }
+}
+
+@media screen and (max-width:500px){
+    .contenedorImg{
+        width: 90%;
+        grid-template-columns: repeat(1, 1fr);
+    }
+    .contenedorImg .boxImg{
+        height: 200px;
+    }
+    
 }
