--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -1,367 +1,62 @@
+:root{
+    --color-negro: #1b1b1b;
+    --color-blanco: #ffffff;
+    --color-gris: #efefef;
+    --color-oro: #c7b8a5;
+}
+
 body{
-    background-color: rgb(255, 255, 255);
+    font-family: 'Oswald', sans-serif;
+    font-weight: 200;
+    background-color: var(--color-negro);
+    color: var(--color-blanco);
+    letter-spacing: .05rem;
 }
 
-/* Menu */
-
-.contenedor{
-    width: 100%;
-    max-width: 1200px;
-    margin: auto;
-    overflow: hidden;
-    padding: 60px 0;
+.lead-xl{
+    font-size: 1.75rem;
 }
 
-.menuNavegacion{
-    padding: 0;
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    height: 70px;
-    padding: 10px 15px;
-    line-height: normal;
-    font-size: 14px;
-    transition: all 500ms ease;
+.nav-link{
+    margin-left: 2rem;
 }
 
-.logoG{
-    height: 60px;
-}
-
-.logoG img{
+.sideways{
+    writing-mode: vertical-lr;
     display: block;
-    height: 100%;
+    margin: 3.5rem;
+    transform: rotate(-180deg);
 }
 
-.enlaces li{
-    list-style: none;
-    display: inline-block;
-
+.btn-primary{
+    background-color: transparent;
+    border: 1px solid var(--color-blanco);
+    border-radius: 0;
+    color: var(--color-blanco);
+    padding: .7rem 2.5rem;
+    font-size: 1.25rem;
 }
 
-.enlaces a{
-    text-transform: none;
-    color: rgb(233, 113, 25);
-    text-decoration: none;
+.btn-primary:hover{
+    background-color: var(--color-blanco);
+    color: var(--color-negro);
+    border: 1px solid var(--color-blanco);
 }
 
-.enlaces a:hover{
-    background-color: rgb(223, 206, 192);
+.navbar{
+    height: 5rem;
 }
 
-/* Hero */
-
-.hero{
-    height: 500px;
-    background-image: url("../img/quienessomos.png");
-    background-position: center;
-    background-size: 600px;
-    background-repeat: no-repeat;
-    text-align: center;
-    border-radius: 20%;
+.border-right{
+    border: 1px solid rgba(256, 256, 256, .1) !important;
 }
 
-.contenedorTextos{
-    padding: 0;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+.nav-item:hover{
+    color: var(--color-negro);
+    background-color: var(--color-blanco);
 }
 
-.heroA{
-    height: 500px;
-    background-image: url("../img/disciplinas.png");
-    background-position: center;
-    background-size: 600px;
-    background-repeat: no-repeat;
-    text-align: center;
-    border-radius: 20%;
-}
-
-.heroB{
-    height: 500px;
-    background-image: url("../img/rutinas.png");
-    background-position: center;
-    background-size: 600px;
-    background-repeat: no-repeat;
-    text-align: center;
-    border-radius: 20%;
-}
-
-.heroC{
-    height: 500px;
-    background-image: url("../img/contact.png");
-    background-position: center;
-    background-size: 600px;
-    background-repeat: no-repeat;
-    text-align: center;
-    border-radius: 20%;
-}
-
-.botonNaranja{
-    width: 150px;
-    display: block;
-    margin: 0 auto;
-    padding: 15px 0;
-    background: orangered;
-    color: #fff;
-    text-decoration: none;
-    border-radius: 15px;
-}
-
-.botonNaranja:hover{
-    transform: scale(1.3);
-}
-
-.botonAzul{
-    width: 150px;
-    display: block;
-    margin: 0 auto;
-    padding: 15px 0;
-    background: blue;
-    color: #fff;
-    text-decoration: none;
-    border-radius: 15px;
-}
-
-.botonAzul:hover{
-    transform: scale(1.3);
-}
-
-
-/* FOOTER */
-
-.piePagina{
-    width: 100%;
-    height: 100px;
-    background-color: #fff;
-}
-
-.piePagina .grupo1{
-    width: 100%;
-    max-width: 1200px;
-    margin: auto;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-gap: 50px;
-    padding: 45px 0px;
-}
-
-.piePagina .grupo1 .box figure{
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.piePagina .grupo1 .box figure img{
-    width: 250px;
-}
-
-.piePagina .grupo1 .box h2{
-    color: #0a1a2a;
-    margin-bottom: 25px;
-    font-size: 20px;
-}
-
-.piePagina .grupo1 .box p{
-    color: #0a1a2a;
-    margin-bottom: 10px;
-}
-
-.piePagina .grupo1 .redSocial a{
-    display: inline-block;
-    text-decoration: none;
-    width: 45px;
-    height: 45px;
-    line-height: 45px;
-    color: #0a1a2a;
-    margin-right: 10px;
-    background-color: black;
-    text-align: center;
-    transition: all 300ms ease;
-} 
-
-
-.piePagina .grupo2{
-    background-color: black;
-    padding: 15px 10px;
-    text-align: center;
-    color: #fff;
-}
-
-.piePagina .grupo2 small{
-    font-size: 15px;
-}
-
-@media screen and (max-width:800px){
-    .piePagina .grupo1{
-        width: 90%;
-        grid-template-columns: repeat(1, 1fr);
-        grid-gap: 30px;
-        padding: 35px 0px;
-    }
-}
-
-/* OTROS */
-
-.sectionQ{
-    background-color: #efefef;
-    color: black;
-}
-
-.sectionR{
-    background-color: #efefef;
-}
-
-
-.tituloR{
-    font-size: 24px;
-}
-
-.rutina{
-    background-color: #efefef;
-    border-radius: 24px;
-}
-.subtituloR{
-    text-align: center;
-    font-size: 22px;
-}
-
-.videoR{
-    margin-left: auto;
-    margin-right: auto;
-}
-
-.tituloP{
-    font-size: 24px;
-}
-
-.infoP{
-    background-color: #efefef;
-}
-
-.subtitulo1{
-    font-size: 22px;
-    text-align: center;
-}
-.subtitulo2{
-    font-size: 22px;
-    text-align: center;
-}
-
-.infoP img{
-    width: 200px;
-    height: 200px;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-.tituloI{
-    font-size: 24px;
-}
-
-.infoI{
-    background-color: #efefef;
-    text-align: justify;
-    text-align: left;
-}
-
-.infoI img{
-    width: 350px;
-    height: 350px;
-    margin-left: auto;
-    margin-right: auto;
-    display: block;
-    border-radius: 30px;
-}
-
-.mapa{
-    margin-left: auto;
-    margin-right: auto;
-    display: block;
-}
-
-.tituloC{
-    font-size: 24px;
-}
-
-.infoC{
-    background-color: #efefef;
-}
-
-.infoRedes{
-        display: inline-block;
-        text-decoration: none;
-        width: 45px;
-        height: 45px;
-        line-height: 45px;
-        margin-right: 10px;
-        text-align: center;
-        transition: all 300ms ease;
-        text-decoration: none;
-}
-
-/*QUIENES SOMOS*/
-
-.contenedorImg{
-    width: 100%;
-    max-width: 1100px;
-    margin: auto;
-    margin-top: 60px;
-    margin-bottom: 60px;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: 250px;
-    grid-gap: 20px;
-}
-
-.contenedorImg .boxImg figure{
-    width: 100%;
-    height: 100%;
-}
-
-.contenedorImg .boxImg img{
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
-
-.contenedorImg .boxImg:nth-child(1){
-    grid-column-start: span 2;
-}
-
-.contenedorImg .boxImg:nth-child(4){
-    grid-row-start: span 2;
-}
-
-.contenedorImg .boxImg figure:hover{
-    transform: scale(1.2);
-}
-@media screen and (max-width:800px){
-    .contenedorImg{
-        width: 95%;
-        grid-template-columns: repeat(2, 1fr);
-        grid-gap: 10px;
-        grid-template-rows: 200px;
-    }
-    .contenedorImg .boxImg:nth-child(1){
-        grid-column-start: span 1;
-    }
-}
-
-@media screen and (max-width:500px){
-    .contenedorImg{
-        width: 90%;
-        grid-template-columns: repeat(1, 1fr);
-    }
-    .contenedorImg .boxImg{
-        height: 200px;
-    }
-    
+.card{
+    background-color: transparent;
+    color: var(--color-blanco);
 }
