--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -28,6 +28,12 @@ body{
     transform: rotate(-180deg);
 }
 
+/* HOME */
+
+.img-home-provisional{
+    border-radius: 1rem;
+}
+
 .btn-primary{
     background-color: transparent;
     border: 1px solid var(--color-blanco);
@@ -56,7 +62,17 @@ body{
     background-color: var(--color-blanco);
 }
 
+
+/* Info */
 .card{
     background-color: transparent;
     color: var(--color-blanco);
 }
+
+/* CALISTENIA */
+
+.animacion-shadows:hover{
+        color: var(--color-negro);
+    background-color: var(--color-blanco);
+}
+
